fix: auth middleware fixed
